# dodder_web

./: School mgmt system.rar  mongoDB(rachayya).rar
3D re-construction/: CMakeLists.txt  Matcher.cpp  MatchingPoi.cpp  PCT.h  buildModel.cpp  dataTypeStructs.h  main.cpp  matcher.h  myLibrary.h  out0.ply  out1.ply  out2.ply  out3.ply  out4.ply  redme.txt  s.mlp  s.mlps  ss.ply  table.txt
3D re-construction phase 1(Vinod)/: CMakeLists.txt  Matcher.cpp  MatchingPoi.cpp  MatchingPoi.h  MatrixCalc.cpp  MatrixCalc.h  PCT.cpp  addPoi.h  buildModel.cpp  buildModel.h  indexer  main.cpp  out0.ply  out1.ply  out10.ply  out11.ply  out12.ply  out13.ply  out2.ply  out3.ply  out5.ply  out6.ply  out7.ply  out8.ply  out9.ply  table.txt
Gousiyakhan/: App.css  App.js  Basicinfo.js  Button.js  Cart.js  CartItem.js  CartTotals.js  Checkout.js  ChildProfile.js  Childprof.js  Contact.js  Context.js  Credit.js  Default.js  Details.js  EmptyCart.js  FormAddressDetails.js  FormUSerDetails.js  Imageupload.css  Imageupload.js  Manageaddress.js  Mydetails.js  Myorder.js  Navbar.js  PayPalButton.js  Product.js  Productlist.js  Profile.js  data.js  index.html  index.js  package-lock.json  package.json  temp.css
YuyutsaShrivastava/Step 1/: README.md
YuyutsaShrivastava/Step 2/: facecrop.py
